--- a/tests-war/pom.xml
+++ b/tests-war/pom.xml
@@ -50,8 +50,8 @@
 	</profiles>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
 		</dependency>
 	</dependencies>
 </project>
